--- a/minidump/Cargo.toml
+++ b/minidump/Cargo.toml
@@ -3,5 +3,18 @@ name = "symbolic-minidump"
 version = "0.1.0"
 authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
 
+[dependencies]
+error-chain = "0.11"
+gimli = "0.14"
+goblin = "0.0"
+serde = "1.0"
+serde_derive = "1.0"
+
+[dependencies.breakpad]
+path = "/Users/jauer/Coding/breakpad"
+
 [dependencies.symbolic-common]
 path = "../common"
+
+[replace]
+"gimli:0.14.0" = { path = "/Users/jauer/Coding/gimli" }
